feat:nurse endpoints
